Wed Sep  8 09:06:08 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          DDS4CCM TopicName test shouldn't be !FIXED_BUGS_ONLY.

Wed Sep  8 08:13:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Receptacle/client.cpp:
          Commented out unnecessary code.

Wed Sep  8 06:34:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/TopicName/descriptors/run_test.pl:
          Hiding output since plan_launcher should return expected errors.

        * connectors/dds4ccm/tests/TopicName/descriptors/Empty.cdp:
          Removed this file.

Tue Sep  7 17:38:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Common/CIF_Common.mpc:
          Resolved compile issue (added after).

Tue Sep  7 12:06:30 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Added CIF and TopicName tests.

        * connectors/dds4ccm/impl/ContentFilteredTopic_T.cpp:
        * connectors/dds4ccm/impl/DDSPublisherListener_T.cpp:
        * connectors/dds4ccm/impl/DDSSubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/DDSTopicListener_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
        * connectors/dds4ccm/impl/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipantFactory_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
        * connectors/dds4ccm/impl/Publisher_T.cpp:
        * connectors/dds4ccm/impl/QueryCondition_T.cpp:
        * connectors/dds4ccm/impl/ReadCondition_T.cpp:
        * connectors/dds4ccm/impl/Subscriber_T.cpp:
        * connectors/dds4ccm/impl/TopicDescription_T.cpp:
        * connectors/dds4ccm/impl/Topic_T.cpp:
          Removed initialization for _var variables.